# foosball-bot

./: .gitignore  .gitmodules  README.md
hardware/: BOM.md
hardware/pcb/: fp-info-cache  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  ~pcb.kicad_pcb.lck
hardware/pcb/production/: bom.csv  netlist.ipc
software/camera/: cameramatrix.txt  commstest.py  cvtest.py  distortion.txt  fisheye.py  fisheyecorrect.py
software/main/control/: comms.py  comms_test.py  comns_test.py
software/main/firmware/: compile_commands.json  firmware.uf2  platformio.ini
software/main/firmware/src/: main.cpp  override-stepper-test-bench.cpp  override-stepper-test.cpp  pinouts.hpp  serialtest.cpp  servo-test.cpp
software/tests/drv8825/: compile_commands.json  platformio.ini
software/tests/drv8825/src/: accel-test.cpp  basic-stepper-driver.cpp
software/tests/servo/: compile_commands.json  platformio.ini
software/tests/servo/src/: main.cpp
v0/hardware/gearbox/: gearbox_rotations_onshape.txt
v0/hardware/pcb/: pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro
v0/software/camera/: calibratepic.py  camrefreshtest.py
v1/hardware/sourcing/: README.md
v1/software/cmake/: generate-flash-target.cmake  print-size.cmake  repo-common.cmake
v1/software/firmware/FOC/: .clangd  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
v1/software/firmware/FOC/config/: FreeRTOSConfig.h  stm32g4xx_hal_conf.h
v1/software/firmware/FOC/middlewares/: CMakeLists.txt
v1/software/firmware/FOC/middlewares/CDC/: CMakeLists.txt  usbd_cdc.c  usbd_cdc_if_template.c  usbd_conf.c  usbd_conf_template.c  usbd_core.c  usbd_ctlreq.c  usbd_desc_template.c  usbd_ioreq.c
v1/software/firmware/FOC/middlewares/CDC/include/: usbd_cdc.h  usbd_cdc_if_template.h  usbd_conf.h  usbd_conf_template.h  usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_desc_template.h  usbd_ioreq.h
v1/software/firmware/FOC/middlewares/DSP/: CMakeLists.txt
v1/software/firmware/FOC/middlewares/DSP/Include/: arm_common_tables.h  arm_const_structs.h  arm_math.h
v1/software/firmware/FOC/src/: CMakeLists.txt  core_interrupts.cpp  main.cpp  syscalls.cpp
v1/software/firmware/FOC/src/FOC_core/: CMakeLists.txt  FOC.cpp  PID.cpp
v1/software/firmware/FOC/src/FOC_core/include/: FOC.hpp  PID.hpp  alpha_beta_gamma_filter.hpp  lowpass_filter.hpp  moving_average.hpp
v1/software/firmware/FOC/src/clock/: CMakeLists.txt  clock.cpp  systick.cpp
v1/software/firmware/FOC/src/clock/include/: clock.hpp
v1/software/firmware/FOC/src/configs/: CMakeLists.txt  config.hpp
v1/software/firmware/FOC/src/configs/configs/: FOC.hpp  debug.hpp  encoder.hpp  inverter.hpp  peripherals.hpp
v1/software/firmware/FOC/src/configs/configs/encoder/: ABZ.hpp  MT6701.hpp
v1/software/firmware/FOC/src/configs/configs/peripherals/: adc.hpp  swo.hpp  uart.hpp  usb.hpp
v1/software/firmware/FOC/src/debug/: CMakeLists.txt  debug.cpp
v1/software/firmware/FOC/src/debug/include/: debug.hpp
v1/software/firmware/FOC/src/encoder/: CMakeLists.txt
v1/software/firmware/FOC/src/encoder/ABZ/: ABZ.cpp  CMakeLists.txt
v1/software/firmware/FOC/src/encoder/ABZ/include/: ABZ.hpp
v1/software/firmware/FOC/src/encoder/MT6701/: CMakeLists.txt  MT6701.cpp
v1/software/firmware/FOC/src/encoder/MT6701/include/: MT6701.hpp
v1/software/firmware/FOC/src/encoder/include/: encoder.hpp
v1/software/firmware/FOC/src/error/: CMakeLists.txt  error.cpp
v1/software/firmware/FOC/src/error/include/: error.hpp
v1/software/firmware/FOC/src/include/: config.hpp  core_interrupts.hpp
v1/software/firmware/FOC/src/include/configs/: debug.hpp
v1/software/firmware/FOC/src/include/configs/peripherals/: pwm.hpp
v1/software/firmware/FOC/src/inverter/: CMakeLists.txt  inverter.cpp
v1/software/firmware/FOC/src/inverter/include/: inverter.hpp
v1/software/firmware/FOC/src/linker_scripts/: G431RB.ld
v1/software/firmware/FOC/src/optional/: CMakeLists.txt
v1/software/firmware/FOC/src/optional/endstop/: CMakeLists.txt  endstop.cpp
v1/software/firmware/FOC/src/optional/endstop/include/: endstop.hpp
v1/software/firmware/FOC/src/peripherals/: CMakeLists.txt
v1/software/firmware/FOC/src/peripherals/adc/: CMakeLists.txt  adc.cpp
v1/software/firmware/FOC/src/peripherals/adc/include/: adc.hpp
v1/software/firmware/FOC/src/peripherals/cordic/: CMakeLists.txt  cordic.cpp
v1/software/firmware/FOC/src/peripherals/cordic/include/: cordic.hpp
v1/software/firmware/FOC/src/peripherals/gpio/: CMakeLists.txt  gpio.cpp
v1/software/firmware/FOC/src/peripherals/gpio/include/: gpio.hpp
v1/software/firmware/FOC/src/peripherals/msp/: CMakeLists.txt  hal_msp_init.cpp
v1/software/firmware/FOC/src/peripherals/pwm/: CMakeLists.txt  pwm.cpp
v1/software/firmware/FOC/src/peripherals/pwm/include/: pwm.hpp
v1/software/firmware/FOC/src/peripherals/spi/: CMakeLists.txt  spi.cpp
v1/software/firmware/FOC/src/peripherals/spi/include/: spi.hpp
v1/software/firmware/FOC/src/peripherals/swo/: CMakeLists.txt  swo.cpp
v1/software/firmware/FOC/src/peripherals/swo/include/: swo.hpp
v1/software/firmware/FOC/src/peripherals/uart/: CMakeLists.txt  uart.cpp
v1/software/firmware/FOC/src/peripherals/uart/include/: uart.hpp
v1/software/firmware/FOC/src/peripherals/usb/: CMakeLists.txt  usb.cpp  usb_device.c  usbd_cdc_if.c  usbd_desc.c
v1/software/firmware/FOC/src/peripherals/usb/include/: usb.hpp  usb_device.h  usbd_cdc_if.h  usbd_desc.h
v1/software/firmware/FOC/src/usb/include/: usb.hpp
v1/software/test-boards/bldc-STM32G474CBT6-stm32-cmake/: CMakeLists.txt  README.md
v1/software/test-boards/bldc-STM32G474CBT6/CMSIS/: CMakeLists.txt
v1/software/test-boards/bldc-STM32G474CBT6/FreeRTOS/: CMakeLists.txt
v1/software/test-boards/bldc-STM32G474CBT6/STM32G4xx_HAL_Driver/: CMakeLists.txt
v1/software/test-boards/bldc-STM32G474CBT6/cmake/stm32cubemx/: CMakeLists.txt
v1/software/test-boards/bldc-STM32G474CBT6/src/init/: CMakeLists.txt  spi.c
v1/software/test-boards/bldc-STM32G474CBT6/src/init/include/: adc.h  fdcan.h  gpio.h  i2c.h  opamp.h  spi.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
(+391 files in other folders)
