cmake_minimum_required(VERSION 4.0)
include(../../cmake/repo-common.cmake)

set(CMAKE_TOOLCHAIN_FILE "${STM32_CMAKE_PATH}/cmake/stm32_gcc.cmake")

set(PROJECT_NAME FOC)

# microcontroller info
set(MCU_SERIES G4)
string(TOLOWER "${MCU_SERIES}" MCU_SERIES_LOWER)
set(MCU_CORE M4F)
set(MCU_SUBSERIES G474CB)

project(${PROJECT_NAME} C CXX ASM)

# HAL config
add_compile_definitions(
    USE_CMSIS_RTOS_V2
    CMSIS_RTOS_V2_DEVICE_HEADER="STM32${MCU_SERIES_LOWER}_hal_conf.h"
)

stm32_fetch_cube(${MCU_SERIES})

# packages
set(HAL_COMPONENTS
    RCC
    CORTEX
    GPIO
    PWR
    FLASH
    STM32${MCU_SUBSERIES}
)
set(CMSIS_COMPONENTS
    STM32${MCU_SUBSERIES}
    STM32${MCU_SERIES}_${MCU_CORE}
    RTOS
)
set(FREERTOS_COMPONENTS
    ARM_C${MCU_CORE}
    STM32${MCU_SERIES}
)

find_package(HAL COMPONENTS ${HAL_COMPONENTS} REQUIRED)
find_package(CMSIS COMPONENTS ${CMSIS_COMPONENTS} REQUIRED)
find_package(FreeRTOS COMPONENTS ${FREERTOS_COMPONENTS} REQUIRED)

set(FREERTOS_NAMESPACE FreeRTOS::STM32::${MCU_SERIES})

set(COMMON_LIBS
HAL::STM32::${MCU_SERIES}
HAL::STM32::${MCU_SERIES}::RCC
HAL::STM32::${MCU_SERIES}::GPIO
HAL::STM32::${MCU_SERIES}::CORTEX
${FREERTOS_NAMESPACE}::Timers
${FREERTOS_NAMESPACE}::Heap::1
${FREERTOS_NAMESPACE}::ARM_C${MCU_CORE}
CMSIS::STM32::${MCU_SUBSERIES}
CMSIS::STM32::${MCU_SERIES}::RTOS
STM32::NoSys
)

set(INCLUDE_DIRS config)
get_filename_component(INCLUDE_DIRS
    "${INCLUDE_DIRS}" ABSOLUTE)

add_subdirectory(src)
